--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -10,22 +10,49 @@
     <div class="item active">
       <img src="http://lorempixel.com/1170/800/abstract/3">
       <div class="carousel-caption text-center">
-        <h4>Star</h4>
+        <h4><%= Visitor::IMAGE_LABELS[0] %></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/1170/800/abstract/2">
       <div class="carousel-caption text-center">
-        <h4>Nexus</h4>
+	<h4><%= Visitor::IMAGE_LABELS[1] %></h4>
       </div>
     </div>
     <div class="item">
       <img src="http://lorempixel.com/1170/800/abstract/1">
       <div class="carousel-caption text-center">
-        <h4>Thunder</h4>
+	<h4><%= Visitor::IMAGE_LABELS[2] %></h4>        
       </div>
     </div>
   </div>
   <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
   <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></a>
+</div>
+<div class="text-center">
+  <br />
+  <%= simple_form_for @visitor do |f| %>
+    <%= f.error_notification %>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <%= f.input :favorite, :collection => Visitor::IMAGE_LABELS,
+              label: false, as: :select, prompt: 'Select a favorite...' %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <%= f.input :comment, label: false, :placeholder => 'Add a comment...',
+              :class => "col-md-12" %>
+          </div>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <%= f.submit "Choose!", :class => "btn btn-primary"%>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
