--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -31,28 +31,41 @@
 </div>
 <div class="text-center">
   <br />
-  <%= simple_form_for @visitor do |f| %>
-    <%= f.error_notification %>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <%= f.input :favorite, :collection => Visitor::IMAGE_LABELS,
+  <div id="modal-form" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: <%= @visitor.errors.any? ? 'block' : 'none';%>" >
+    <div class="modal-dialog">
+      <div class="modal-content">
+	<%= simple_form_for @visitor do |f| %>
+	 <div class="modal-header">
+	   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	   <h4 class="modal-title" id="myModalLabel">Select a Picture</h4>
+	 </div>
+	 
+	 <div class="modal-body">
+	   <div class="container">
+	     <div class="row">
+               <div class="col-md-4 col-md-offset-1">
+		 <%= f.error_notification %>
+		 <%= f.input :favorite, :collection => Visitor::IMAGE_LABELS,
               label: false, as: :select, prompt: 'Select a favorite...' %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <%= f.input :comment, label: false, :placeholder => 'Add a comment...',
-              :class => "col-md-12" %>
-          </div>
-        </div>
-      </div>
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <%= f.submit "Choose!", :class => "btn btn-primary"%>
-          </div>
-        </div>
+               </div>
+             </div>
+             <div class="row">
+               <div class="col-md-4 col-md-offset-1">
+		 <%= f.input :comment, label: false, :placeholder => 'Add a comment...',
+		 :class => "col-md-12" %>
+               </div>
+             </div>
+	   </div>
+	 </div>
+	 <div class="modal-footer">
+	   <%= f.submit "Choose!", :class => "btn btn-primary"%>
+	   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         </div>
+	<% end %>
       </div>
     </div>
-  <% end %>
+  </div>
+  <div id="call-to-cation">
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" href="#modal-form">Choose!</button>
+  </div>
 </div>
